2011-07-11  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (top): Require `tabulated-list'.  Autoload
	`widget-convert'.
	(debbugs-gnu-handled, debbugs-gnu-stale): Fix docstring.
	(debbugs-gnu-get-bugs): Do not sort ids, it is done later anyway.
	(debbugs-gnu-show-reports): Move inserting of text to ...
	(debbugs-gnu-print-entry): New defun.
	(debbugs-gnu-mode-map): Set parent map to `tabulated-list-mode-map'.
	(debbugs-gnu-mode): Derive from `tabulated-list-mode'.  Initialize
	`tabulated-list-*' objects.
	(debbugs-gnu-sort-id, debbugs-gnu-sort-state)
	(debbugs-gnu-sort-title): New defuns.  Sort functions for
	respective columns.
	(debbugs-gnu-toggle-sort): Use `tabulated-list' functions.
	(debbugs-gnu-toggle-suppress-done): Renamed from
	`debbugs-gnu-suppress-done'.  Use `tabulated-list' functions.
	(debbugs-gnu-current-status): Use text property `tabulated-list-id'.

2011-07-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs-gnu.el (debbugs-gnu-send-control-message): Add
	donenotabug and donewontfix.
	(debbugs-gnu-send-control-message): Add doneunreproducible.
	(debbugs-gnu-show-reports): One week is a better period for
	staleness, I think.

2011-07-08  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-gnu-*): Rename from `debbugs-*'.
	(debbugs-gnu-default-severities): Add pseudo severity "tagged".
	(debbugs-gnu-get-bugs): New defun.
	(debbugs-gnu, debbugs-gnu-rescan): Use it.

2011-07-07  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (top): Add ;;; Commentary.
	(debbugs-default-severities, debbugs-default-packages)
	(debbugs-default-hits-per-page): New customer options.
	(debbugs-current-severities, debbugs-current-packages)
	(debbugs-current-archive): Renamed from `debbugs-severities',
	`debbugs-package', `debbugs-archive'.
	(debbugs-emacs): Reorder arguments.  If called interactively with
	prefix, ask for optional arguments values.  Loop also for several
	packages.